Fixed duplication, worked on about

--- a/about.html
+++ b/about.html
@@ -123,9 +123,13 @@ I’m Jacob Frank, a Creative Developer, Designer and 2nd year student at the Ro
                 </div>
             </div>
             <div class="case__info__about">
+
+                <div class="case__row--image__about">
+                    <img src="https://taw.imgix.net/taw2016Site/meWithLegos.JPG?w=1&h=1" class="casestudy__image__about">
+                </div>
                 <div class="case__info__container case__info__container__about">
                     <div class="case__info__row case__info__row__about">
-                        <div class="column col-12 case__description__hr--pushDown">
+                        <div class="column">
                             <p class="first roboto--regular fluid-type14-20">
                                 I want to solve problems and It’s less about the people who are looking ahead to the next smartphone, but how families will be able to put food on their table.
                                 <br><br> I’ve been a creative since I was young. I started with LEGO bricks, and moved on to Halo 3’s map maker before graduating to professional design tools, text editors, and notepads.
@@ -133,9 +137,7 @@ I’m Jacob Frank, a Creative Developer, Designer and 2nd year student at the Ro
                                 <br><br> And hey, I’m looking for an internship this summer.
                                 <br><br> hello@jacobdfrank.com
                             </p>
-                            <div class="casestudy__row--image">
-                                <img src="https://taw.imgix.net/taw2016Site/meWithLegos.JPG?w=1&h=1" class="casestudy__image">
-                            </div>
+
                         </div>
                     </div>
                 </div>
