--- a/hawkes.html
+++ b/hawkes.html
@@ -150,9 +150,7 @@
                     <div class="casestudy__row--text column col-12">
                         <h2 class="roboto--bold fluid-type14-20">Understanding the Brand</h2>
                         <p class="roboto--regular fluid-type14-20">
-                            Hawkes Media Group is a full-service digital media production company based near Boston, Massachusetts. Their need for a new website was urgent. One of their staff tried to create a new website 6 months earlier, but was too busy to complete it.<br><br>Hawkes
-                            Media Group is a full-service digital media production company based near Boston, Massachusetts. Their need for a new website was urgent. One of their staff tried to create a new website 6 months earlier, but was too busy to
-                            complete it.
+                            Hawkes Media Group is a full-service digital media production company based near Boston, Massachusetts. Their need for a new website was urgent. One of their staff tried to create a new website 6 months earlier, but was too busy to complete it.
                         </p>
                     </div>
                     <div class="casestudy__row--image">
