Fixed another duplication

--- a/hawkes.html
+++ b/hawkes.html
@@ -159,8 +159,7 @@
                     <div class="casestudy__row--text column col-12">
                         <h2 class="roboto--bold fluid-type14-20">Assessing the Problem</h2>
                         <p class="roboto--regular fluid-type14-20">
-                            Compared to their old, busy-looking site, the client wanted to showcase their work in a much simpler, direct and focused way. The first thing I did was gain an understanding of what a digital media company needs on a site and who they wanted to attract
-                            to the site. <br><br> Compared to their old, busy-looking site, the client wanted to showcase their work in a much simpler, direct and focused way. The first thing I did was gain an understanding
+                            Compared to their old, busy-looking site, the client wanted to showcase their work in a much simpler, direct and focused way. The first thing I did was gain an understanding
                             of what a digital media company needs on a site and who they wanted to attract to the site.
                         </p>
                     </div>
