--- a/about.html
+++ b/about.html
@@ -101,16 +101,10 @@
     </div>
     <div class="nav__about">
         <div class="nav__wrapper nav--left nav--transform">
-            <p class="fluid-type14-20 roboto--regular link"> <a class="nolink__decoration" href="http://www.jacobdfrank.com" target="_blank"> Home</a> </p>
+            <p class="fluid-type14-20 roboto--regular link"> <a class="nolink__decoration" href="window.history.back();" target="_blank"> Home</a> </p>
         </div>
         <div class="nav__wrapper nav--transformRight nav--right">
             <p class="fluid-type14-20 roboto--regular link"> <a class="nolink__decoration" href="mailto:hello@jacobdfrank.com?subject=Jacob, let’s talk"> Email</a> </p>
-        </div>
-    </div>
-    <div class="bottom__link link index--rise1">
-        <p class="fluid-type14-20 roboto--regular center__link__name"> <a class="nolink__decoration link__name__color__about" href="../#page4">Next Project</a></p>
-        <div class="bottom__link__line__container">
-            <div class="bottom__link__line--case__about"></div>
         </div>
     </div>
     <div id="fullpage" onscroll="getScrollPosition()">
@@ -119,32 +113,34 @@
                 <img src="http://thoughtatwork.cias.rit.edu/img/taw2016Site/aboutPhotoCrop.jpg?w=1&h=1" class="case__cover__image__about">
                 <div class="case__cover__content__about">
                     <h1 class="project__cover__content__title fluid-type24-44 myriad-pro-condensed">Hello, <br>
-I’m Jacob Frank, a Creative Developer, Designer and 2nd year student at the Rochester Institute of Technology. My goal is to make visually appealing websites and design and craft products for the people that need&nbsp;them&nbsp;most.</h1>
-                </div>
-            </div>
-            <div class="case__info__about">
+I’m Jacob Frank, a Creative Developer, Designer and 2nd year student at the Rochester Institute of Technology. My goal is to make visually appealing websites and design and craft products for the people that need&nbsp;them&nbsp;most.
+                    </h1>
+                    <div class="case__info__container__about">
+                        <!-- <img src="https://taw.imgix.net/taw2016Site/meWithLegos.JPG?w=1&h=1" class="casestudy__image__about"> -->
+                        <p class="first roboto--regular fluid-type14-20">
+                            I want to solve problems and It’s less about the people who are looking ahead to the next smartphone, but how families will be able to put food on their table.
 
-                <div class="case__row--image__about">
-                    <img src="https://taw.imgix.net/taw2016Site/meWithLegos.JPG?w=1&h=1" class="casestudy__image__about">
-                </div>
-                <div class="case__info__container case__info__container__about">
-                    <div class="case__info__row case__info__row__about">
-                        <div class="column">
-                            <p class="first roboto--regular fluid-type14-20">
-                                I want to solve problems and It’s less about the people who are looking ahead to the next smartphone, but how families will be able to put food on their table.
-                                <br><br> I’ve been a creative since I was young. I started with LEGO bricks, and moved on to Halo 3’s map maker before graduating to professional design tools, text editors, and notepads.
-                                <br><br> Having the ability to develop and design solutions is empowering. It’s the real world impact that matters, not the digital one. And right now I’m learning the skills I need to make that happen.
-                                <br><br> And hey, I’m looking for an internship this summer.
-                                <br><br> hello@jacobdfrank.com
-                            </p>
-
-                        </div>
+                            <br>
+                            <img src="https://taw.imgix.net/taw2016Site/meWithLegos.JPG?w=1&h=1" class="casestudy__image__about"><br><br> I’ve been a creative since I was young. I started with LEGO bricks, and moved on to Halo 3’s map maker before graduating
+                            to professional design tools, text editors, and notepads.
+                            <br><br> Having the ability to develop and design solutions is empowering. It’s the real world impact that matters, not the digital one. And right now I’m learning the skills I need to make that happen.
+                            <br><br> And hey, I’m looking for an internship this summer.
+                            <br><br> hello@jacobdfrank.com
+                        </p>
                     </div>
+                    <p class="roboto--regular fluid-type14-20">
+                        <br>
+                        <br>
+                        <a class="nolink__decoration link link__about" href="https://www.jacobdfrank.com/media/Jacob_Frank_Resume.pdf" target="_blank"> Resume</a> &nbsp; &nbsp; &nbsp;
+                        <a class="nolink__decoration link link__about" href="https://www.linkedin.com/in/jacobdfrank" target="_blank">Linkedin</a> &nbsp; &nbsp; &nbsp;<a class="nolink__decoration link link__about" href="https://www.instagram.com/jacobdfrank/" target="_blank">Instagram</a>
+                        <a class="nolink__decoration link link__about" href="https://www.instagram.com/jacobdfrank/" target="_blank">&nbsp; &nbsp; &nbsp;
+                        <a class="nolink__decoration link link__about" href="https://twitter.com/jacobdfrank" target="_blank">Twitter</a> &nbsp; &nbsp; &nbsp;
+                        <a class="nolink__decoration link link__about" href="https://github.com/JacobDFrank" target="_blank">Github</a>
+                    </p>
                 </div>
             </div>
             <div class="case__info case__info__about">
                 <div class="casestudy__container">
-
                     <div class="casestudy__emptyBlock casestudy__row">
                     </div>
                 </div>
