--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
     </div>
     <div class="nav">
         <div class="nav__wrapper nav--left nav--transform">
-            <p class="fluid-type14-20 roboto--regular link"> <a class="nolink__decoration" href="http://www.jacobdfrank.com/media/Jacob_Frank_Resume.pdf" target="_blank"> Resume</a> </p>
+            <p class="fluid-type14-20 roboto--regular link"> <a class="nolink__decoration" href="about.html" target="_blank"> About</a> </p>
         </div>
         <div class="nav__wrapper nav--transformRight nav--right">
             <p class="fluid-type14-20 roboto--regular link"> <a class="nolink__decoration" href="mailto:hello@jacobdfrank.com?subject=Jacob, let’s talk"> Email</a> </p>
