fixed about link

--- a/about.html
+++ b/about.html
@@ -101,7 +101,7 @@
     </div>
     <div class="nav__about">
         <div class="nav__wrapper nav--left nav--transform">
-            <p class="fluid-type14-20 roboto--regular link"> <a class="nolink__decoration" href="window.history.back();" target="_blank"> Home</a> </p>
+            <p class="fluid-type14-20 roboto--regular link"> <a class="nolink__decoration" href="index.html" target="_blank"> Home</a> </p>
         </div>
         <div class="nav__wrapper nav--transformRight nav--right">
             <p class="fluid-type14-20 roboto--regular link"> <a class="nolink__decoration" href="mailto:hello@jacobdfrank.com?subject=Jacob, let’s talk"> Email</a> </p>
