--- a/webgl.html
+++ b/webgl.html
@@ -43,7 +43,7 @@
     <script src='https://cdnjs.cloudflare.com/ajax/libs/three.js/r79/three.min.js'></script>
     <script src="vendors/jquery.easings.min.js"></script>
     <script type="text/javascript" src="vendors/scrolloverflow.min.js"></script>
-    <script type="text/javascript" src="js/jquery.fullPage.min.js"></script>
+    <script type="text/javascript" src="js/jquery.fullpage.extensions.min.js"></script>
     <!-- <script type="text/javascript" src="js/VirtualScroll.js"></script> -->
     <script type="text/javascript" src="js/jquery.fullpage.extensions.min.js"></script>
     <script>
@@ -94,6 +94,7 @@
 </head>
 
 <body>
+    <script>document.body.className += ' fade-out';</script>
     <div class="top__link link index--rise1">
         <p class="fluid-type14-20 roboto--regular top__link__name center__link__name"> <a class="nolink__decoration link__name__color" href="../#page3">Back</a></p>
         <div class="top__link__line__container">
