--- a/about.html
+++ b/about.html
@@ -44,8 +44,9 @@
     <script src='https://cdnjs.cloudflare.com/ajax/libs/three.js/r79/three.min.js'></script>
     <script src="vendors/jquery.easings.min.js"></script>
     <script type="text/javascript" src="vendors/scrolloverflow.min.js"></script>
-    <script type="text/javascript" src="js/jquery.fullPage.min.js"></script>
-    <!-- <script type="text/javascript" src="js/VirtualScroll.js"></script> -->
+    <script type="text/javascript" src="js/jquery.fullpage.extensions.min.js"></script>
+    <script type="text/javascript" src="js/imgix.min.js"></script>
+    <script type="text/javascript" src="js/VirtualScroll.js"></script>
     <script type="text/javascript" src="js/jquery.fullpage.extensions.min.js"></script>
     <script>
         (function(i, s, o, g, r, a, m) {
@@ -110,7 +111,7 @@
     <div id="fullpage" onscroll="getScrollPosition()">
         <div class="section">
             <div class="case__cover__about">
-                <img src="http://thoughtatwork.cias.rit.edu/img/taw2016Site/aboutPhotoCrop.jpg?w=1&h=1" class="case__cover__image__about">
+                <img ix-src="http://thoughtatwork.cias.rit.edu/img/taw2016Site/aboutPhotoCrop.jpg?fit=crop&amp;crop=faces" class="case__cover__image__about" sizes="(min-width: 768px) 400px, 20vw" alt="Picture of me in jacket">
                 <div class="case__cover__content__about">
                     <h1 class="project__cover__content__title fluid-type24-44 myriad-pro-condensed">Hello, <br>
 I’m Jacob Frank, a Creative Developer, Designer and 2nd year student at the Rochester Institute of Technology. My goal is to make visually appealing websites and design and craft products for the people that need&nbsp;them&nbsp;most.
@@ -121,8 +122,8 @@ I’m Jacob Frank, a Creative Developer, Designer and 2nd year student at the Ro
                             I want to solve problems and It’s less about the people who are looking ahead to the next smartphone, but how families will be able to put food on their table.
 
                             <br>
-                            <img src="https://taw.imgix.net/taw2016Site/meWithLegos.JPG?w=1&h=1" class="casestudy__image__about"><br><br> I’ve been a creative since I was young. I started with LEGO bricks, and moved on to Halo 3’s map maker before graduating
-                            to professional design tools, text editors, and notepads.
+                            <br><br> I’ve been a creative since I was young. I started with LEGO bricks, and moved on to Halo 3’s map maker before graduating to professional design tools, text editors, and notepads.
+                            <img ix-src="https://taw.imgix.net/taw2016Site/meWithLegos.JPG?fit=crop&amp;crop=faces" class="casestudy__image__about" sizes="(min-width: 768px) 400px, 20vw" alt="8 Year old me with legos">
                             <br><br> Having the ability to develop and design solutions is empowering. It’s the real world impact that matters, not the digital one. And right now I’m learning the skills I need to make that happen.
                             <br><br> And hey, I’m looking for an internship this summer.
                             <br><br> hello@jacobdfrank.com
@@ -132,10 +133,12 @@ I’m Jacob Frank, a Creative Developer, Designer and 2nd year student at the Ro
                         <br>
                         <br>
                         <a class="nolink__decoration link link__about" href="https://www.jacobdfrank.com/media/Jacob_Frank_Resume.pdf" target="_blank"> Resume</a> &nbsp; &nbsp; &nbsp;
-                        <a class="nolink__decoration link link__about" href="https://www.linkedin.com/in/jacobdfrank" target="_blank">Linkedin</a> &nbsp; &nbsp; &nbsp;<a class="nolink__decoration link link__about" href="https://www.instagram.com/jacobdfrank/" target="_blank">Instagram</a>
-                        <a class="nolink__decoration link link__about" href="https://www.instagram.com/jacobdfrank/" target="_blank">&nbsp; &nbsp; &nbsp;
+                        <a class="nolink__decoration link link__about" href="https://www.linkedin.com/in/jacobdfrank" target="_blank">Linkedin</a> &nbsp; &nbsp; &nbsp;
+                        <a class="nolink__decoration link link__about" href="https://www.instagram.com/jacobdfrank/"
+                            target="_blank">Instagram</a>
+                            <a class="nolink__decoration link link__about" href="https://www.instagram.com/jacobdfrank/" target="_blank">&nbsp; &nbsp; &nbsp;
                         <a class="nolink__decoration link link__about" href="https://twitter.com/jacobdfrank" target="_blank">Twitter</a> &nbsp; &nbsp; &nbsp;
-                        <a class="nolink__decoration link link__about" href="https://github.com/JacobDFrank" target="_blank">Github</a>
+                            <a class="nolink__decoration link link__about" href="https://github.com/JacobDFrank" target="_blank">Github</a>
                     </p>
                 </div>
             </div>
