--- a/about.html
+++ b/about.html
@@ -111,7 +111,7 @@
     <div id="fullpage" onscroll="getScrollPosition()">
         <div class="section">
             <div class="case__cover__about">
-                <img ix-src="http://thoughtatwork.cias.rit.edu/img/taw2016Site/aboutPhotoCrop.jpg?fit=crop&amp;crop=faces" class="case__cover__image__about" sizes="(min-width: 768px) 400px, 20vw" alt="Picture of me in jacket">
+                <img src="http://thoughtatwork.cias.rit.edu/img/taw2016Site/aboutPhotoCrop.jpg" class="case__cover__image__about" alt="Picture of me in jacket">
                 <div class="case__cover__content__about">
                     <h1 class="project__cover__content__title fluid-type24-44 myriad-pro-condensed">Hello, <br>
 I’m Jacob Frank, a Creative Developer, Designer and 2nd year student at the Rochester Institute of Technology. My goal is to make visually appealing websites and design and craft products for the people that need&nbsp;them&nbsp;most.
