Did about transition

--- a/about.html
+++ b/about.html
@@ -32,7 +32,6 @@
 
     <meta name="author" content="Jacob Frank">
 
-
     <title>Jacob Frank Developer &amp; Designer</title>
 
     <link rel="stylesheet" href="css/style.css">
@@ -46,7 +45,6 @@
     <script type="text/javascript" src="vendors/scrolloverflow.min.js"></script>
     <script type="text/javascript" src="js/jquery.fullpage.extensions.min.js"></script>
     <script type="text/javascript" src="js/imgix.min.js"></script>
-    <script type="text/javascript" src="js/VirtualScroll.js"></script>
     <script type="text/javascript" src="js/jquery.fullpage.extensions.min.js"></script>
     <script>
         (function(i, s, o, g, r, a, m) {
@@ -94,8 +92,10 @@
         })(document);
     </script>
 </head>
-
 <body class="body__about">
+    <script>
+        document.body.className += ' fade-out';
+    </script>
     <div class="homepage__text homepage__text--about">
         <p class="fluid-type24-44 myriad-pro-condensed homepage__name projects__name index--rise1"><a href="index.html">JACOB FRANK</a></p>
         <p class="fluid-type12x-16 roboto--regular projects__subhead index--rise1"><a href="index.html">Developer &amp; Designer</a></p>
