--- a/webgl.html
+++ b/webgl.html
@@ -92,7 +92,9 @@
 </head>
 
 <body>
-    <script>document.body.className += ' fade-out';</script>
+    <script>
+        document.body.className += ' fade-out';
+    </script>
     <div class="top__link link index--rise1">
         <p class="fluid-type14-20 roboto--regular top__link__name center__link__name"> <a class="nolink__decoration link__name__color" href="../#page3">Back</a></p>
         <div class="top__link__line__container">
@@ -143,9 +145,6 @@
             <div class="case__info">
                 <div class="casestudy__container">
                     <div class="casestudy__row--image">
-                        <img src="https://taw.imgix.net/spread.JPG?w=1&h=1" class="casestudy__image">
-                    </div>
-                    <div class="casestudy__row--image">
                         <p data-height="656" data-theme-id="light" data-slug-hash="apJZzb" data-default-tab="result" data-user="JacobDFrank" data-embed-version="2" data-pen-title="Spread" class="codepen">See the Pen <a href="http://codepen.io/JacobDFrank/pen/apJZzb/">Spread</a> by Jacob D Frank (<a href="http://codepen.io/JacobDFrank">@JacobDFrank</a>) on <a href="http://codepen.io">CodePen</a>.</p>
                         <script async src="https://production-assets.codepen.io/assets/embed/ei.js"></script>
                     </div>
@@ -157,10 +156,19 @@
                         </p>
                     </div>
                     <div class="casestudy__row--image">
-                        <img src="https://taw.imgix.net/particleCreator.jpg?w=1&h=1" class="casestudy__image">
+                        <p data-height="656" data-theme-id="light" data-slug-hash="GWVrOx" data-default-tab="result" data-user="JacobDFrank" data-embed-version="2" data-pen-title="GLSL Cyclic Automata" class="codepen">See the Pen <a href="http://codepen.io/JacobDFrank/pen/GWVrOx/">GLSL Cyclic Automata</a> by Jacob D Frank (<a href="http://codepen.io/JacobDFrank">@JacobDFrank</a>) on <a href="http://codepen.io">CodePen</a>.</p>
+                        <script async src="https://production-assets.codepen.io/assets/embed/ei.js"></script>
+                    </div>
+                    <div class="casestudy__row--text column col-12">
+                        <p class="roboto--regular fluid-type14-20">
+                            Recently I've been learning basic GLSL on my own, the best part is taking a break halfway through and playing around with the shaders.
+                        </p>
                     </div>
                     <div class="casestudy__row--image">
-                        <img src="https://taw.imgix.net/shadowBox.jpg?w=1&h=1" class="casestudy__image">
+                        <img src="https://taw.imgix.net/spread.JPG?w=1&h=1" class="casestudy__image">
+                    </div>
+                    <div class="casestudy__row--image">
+                        <img src="https://taw.imgix.net/particleCreator.jpg?w=1&h=1" class="casestudy__image">
                     </div>
                     <div class="casestudy__row--image">
                         <p data-height="656" data-theme-id="light" data-slug-hash="oBZYXV" data-default-tab="result" data-user="JacobDFrank" data-embed-version="2" data-pen-title="fragmentShader-One" class="codepen">See the Pen <a href="http://codepen.io/JacobDFrank/pen/oBZYXV/">fragmentShader-One</a> by Jacob D Frank (<a href="http://codepen.io/JacobDFrank">@JacobDFrank</a>) on <a href="http://codepen.io">CodePen</a>.</p>
