Added documentation link

--- a/school/IGME590/index.html
+++ b/school/IGME590/index.html
@@ -47,7 +47,7 @@
             <p class="description">Displayed in most recent order.</p>
             <ul>
                 <li>
-                    <a href="assignments/CyclicAutomata" target="_blank">Cyclic Automata(2Ds)</a>
+                    <a href="assignments/CyclicAutomata" target="_blank">Cyclic Automata(2Ds)</a> &amp; <a href="https://paper.dropbox.com/doc/Documentation-for-Cyclic-Automata-u6fPOISkpNkjAN7T6Gima" target="_blank">Documenation for it</a> 
                 </li>
                 <li>
                     <a href="assignments/soundAdaptation" target="_blank">Sound Mod</a>
