--- a/school/IGME590/assignments/CyclicAutomata/shaders.html
+++ b/school/IGME590/assignments/CyclicAutomata/shaders.html
@@ -4,8 +4,8 @@
 
     void main() {
         vUv = uv;
-        vec4 mvPosition = modelViewMatrix * vec4(position, 1.0);
-        gl_Position = projectionMatrix * mvPosition;
+    gl_Position = projectionMatrix *
+                  modelViewMatrix * vec4(position, 1.0 );
     } // needed for a GLSL Vertex shader
 </script>
 
