Added glsl work

--- a/webgl.html
+++ b/webgl.html
@@ -156,6 +156,15 @@
                         </p>
                     </div>
                     <div class="casestudy__row--image">
+                        <p data-height="656" data-theme-id="light" data-slug-hash="GWVrOx" data-default-tab="result" data-user="JacobDFrank" data-embed-version="2" data-pen-title="GLSL Cyclic Automata" class="codepen">See the Pen <a href="http://codepen.io/JacobDFrank/pen/GWVrOx/">GLSL Cyclic Automata</a> by Jacob D Frank (<a href="http://codepen.io/JacobDFrank">@JacobDFrank</a>) on <a href="http://codepen.io">CodePen</a>.</p>
+                        <script async src="https://production-assets.codepen.io/assets/embed/ei.js"></script>
+                    </div>
+                    <div class="casestudy__row--text column col-12">
+                        <p class="roboto--regular fluid-type14-20">
+                            Recently I've been learning basic GLSL on my own, the best part is taking a break halfway through and playing around with the shaders.
+                        </p>
+                    </div>
+                    <div class="casestudy__row--image">
                         <img src="https://taw.imgix.net/spread.JPG?w=1&h=1" class="casestudy__image">
                     </div>
                     <div class="casestudy__row--image">
