Fixed email thing on site

--- a/about.html
+++ b/about.html
@@ -125,7 +125,7 @@ I’m Jacob Frank, a Creative Developer, Designer and 2nd year student at the Ro
                             <img ix-src="https://taw.imgix.net/taw2016Site/meWithLegos.JPG?fit=crop&amp;crop=faces" class="casestudy__image__about" sizes="(min-width: 768px) 400px, 20vw" alt="8 Year old me with legos">
                             <br><br> Having the ability to develop and design solutions is empowering. It’s the real world impact that matters, not the digital one. And right now I’m learning the skills I need to make that happen.
                             <br><br> And hey, I’m looking for an internship this summer.
-                            <br><br> hello@jacobdfrank.com
+                            <br><br> <a class="nolink__decoration" href="mailto:hello@jacobdfrank.com?subject=Jacob, let’s talk"> hello@jacobdfrank.com</a>
                         </p>
                     </div>
                     <p class="roboto--regular fluid-type14-20">
