added lazy loading

--- a/seo.html
+++ b/seo.html
@@ -150,7 +150,7 @@
                         </p>
                     </div>
                     <div class="casestudy__row--image">
-                        <img src="https://taw.imgix.net/taw2016Site/seo_sketches.png?w=1&h=1" class="casestudy__image">
+                        <img data-src="https://taw.imgix.net/taw2016Site/seo_sketches.png?w=1&h=1" class="casestudy__image">
                     </div>
                     <div class="casestudy__row--text column col-12">
                         <h2 class="roboto--bold fluid-type14-20">Sketching</h2>
@@ -165,7 +165,7 @@
                         <p class="roboto--regular fluid-type14-20">After all this was done I shrank the site’s theoretical footprint from 20+ pages to about 6.</p>
                     </div>
                     <div class="casestudy__row--image column col-12">
-                        <img src="https://taw.imgix.net/taw2016Site/seo_homepage.png?w=1&h=1" class="casestudy__image">
+                        <img data-src="https://taw.imgix.net/taw2016Site/seo_homepage.png?w=1&h=1" class="casestudy__image">
                     </div>
                     <div class="casestudy__row--text column col-12">
                         <h2 class="roboto--bold fluid-type14-20">Wireframes</h2>
@@ -174,7 +174,7 @@
                         </p>
                     </div>
                     <div class="casestudy__row--image column col-12">
-                        <img src="https://taw.imgix.net/taw2016Site/seo_verify.png?w=1&h=1" class="casestudy__image">
+                        <img data-src="https://taw.imgix.net/taw2016Site/seo_verify.png?w=1&h=1" class="casestudy__image">
                     </div>
                     <div class="casestudy__row--text column col-12">
                         <h2 class="roboto--bold fluid-type14-20">Designing the Site</h2>
