--- a/webgl.html
+++ b/webgl.html
@@ -146,7 +146,7 @@
                 <div class="casestudy__container">
                     <div class="casestudy__row--image">
                         <p data-height="656" data-theme-id="light" data-slug-hash="apJZzb" data-default-tab="result" data-user="JacobDFrank" data-embed-version="2" data-pen-title="Spread" class="codepen">See the Pen <a href="http://codepen.io/JacobDFrank/pen/apJZzb/">Spread</a> by Jacob D Frank (<a href="http://codepen.io/JacobDFrank">@JacobDFrank</a>) on <a href="http://codepen.io">CodePen</a>.</p>
-                        <script async src="https://production-assets.codepen.io/assets/embed/ei.js"></script>
+                        <script async data-src="https://production-assets.codepen.io/assets/embed/ei.js"></script>
                     </div>
                     <div class="casestudy__row--text column col-12">
                         <h2 class="roboto--bold fluid-type14-20">About</h2>
@@ -157,7 +157,7 @@
                     </div>
                     <div class="casestudy__row--image">
                         <p data-height="656" data-theme-id="light" data-slug-hash="GWVrOx" data-default-tab="result" data-user="JacobDFrank" data-embed-version="2" data-pen-title="GLSL Cyclic Automata" class="codepen">See the Pen <a href="http://codepen.io/JacobDFrank/pen/GWVrOx/">GLSL Cyclic Automata</a> by Jacob D Frank (<a href="http://codepen.io/JacobDFrank">@JacobDFrank</a>) on <a href="http://codepen.io">CodePen</a>.</p>
-                        <script async src="https://production-assets.codepen.io/assets/embed/ei.js"></script>
+                        <script async data-src="https://production-assets.codepen.io/assets/embed/ei.js"></script>
                     </div>
                     <div class="casestudy__row--text column col-12">
                         <p class="roboto--regular fluid-type14-20">
@@ -165,23 +165,23 @@
                         </p>
                     </div>
                     <div class="casestudy__row--image">
-                        <img src="https://taw.imgix.net/spread.JPG?w=1&h=1" class="casestudy__image">
+                        <img data-src="https://taw.imgix.net/spread.JPG?w=1&h=1" class="casestudy__image">
                     </div>
                     <div class="casestudy__row--image">
-                        <img src="https://taw.imgix.net/particleCreator.jpg?w=1&h=1" class="casestudy__image">
+                        <img data-src="https://taw.imgix.net/particleCreator.jpg?w=1&h=1" class="casestudy__image">
                     </div>
                     <div class="casestudy__row--image">
                         <p data-height="656" data-theme-id="light" data-slug-hash="oBZYXV" data-default-tab="result" data-user="JacobDFrank" data-embed-version="2" data-pen-title="fragmentShader-One" class="codepen">See the Pen <a href="http://codepen.io/JacobDFrank/pen/oBZYXV/">fragmentShader-One</a> by Jacob D Frank (<a href="http://codepen.io/JacobDFrank">@JacobDFrank</a>) on <a href="http://codepen.io">CodePen</a>.</p>
-                        <script async src="https://production-assets.codepen.io/assets/embed/ei.js"></script>
+                        <script async data-src="https://production-assets.codepen.io/assets/embed/ei.js"></script>
                     </div>
                     <div class="casestudy__row--image">
-                        <img src="https://taw.imgix.net/face.jpg?w=1&h=1" class="casestudy__image">
+                        <img data-src="https://taw.imgix.net/face.jpg?w=1&h=1" class="casestudy__image">
                     </div>
                     <div class="casestudy__row--image">
-                        <img src="https://taw.imgix.net/cones.png?w=1&h=1" class="casestudy__image">
+                        <img data-src="https://taw.imgix.net/cones.png?w=1&h=1" class="casestudy__image">
                     </div>
                     <div class="casestudy__row--image">
-                        <img src="https://taw.imgix.net/blackHole.jpg?w=1&h=1" class="casestudy__image">
+                        <img data-src="https://taw.imgix.net/blackHole.jpg?w=1&h=1" class="casestudy__image">
                     </div>
                     <div class="casestudy__emptyBlock casestudy__row">
                     </div>
