Went back to regular src

--- a/hawkes.html
+++ b/hawkes.html
@@ -156,7 +156,7 @@
                         </p>
                     </div>
                     <div class="casestudy__row--image">
-                        <img data-src="https://taw.imgix.net/taw2016Site/hmg__final__about.png?w=1&h=1" class="casestudy__image">
+                        <img src="https://taw.imgix.net/taw2016Site/hmg__final__about.png?w=1&h=1" class="casestudy__image">
                     </div>
                     <div class="casestudy__row--text column col-12">
                         <h2 class="roboto--bold fluid-type14-20">Assessing the Problem</h2>
@@ -166,7 +166,7 @@
                         </p>
                     </div>
                     <div class="casestudy__row--image column col-12">
-                        <img data-src="https://taw.imgix.net/taw2016Site/hmg_sketches.png?w=1&h=1" class="casestudy__image">
+                        <img src="https://taw.imgix.net/taw2016Site/hmg_sketches.png?w=1&h=1" class="casestudy__image">
                     </div>
                     <div class="casestudy__row--text column col-12">
                         <h2 class="roboto--bold fluid-type14-20">Designing the Site</h2>
@@ -175,7 +175,7 @@
                         </p>
                     </div>
                     <div class="casestudy__row--image column col-12">
-                        <img data-src="https://taw.imgix.net/taw2016Site/homepage__wires.png?w=1&h=1" class="casestudy__image">
+                        <img src="https://taw.imgix.net/taw2016Site/homepage__wires.png?w=1&h=1" class="casestudy__image">
                     </div>
 
                     <div class="casestudy__row--text column col-12">
@@ -185,7 +185,7 @@
                         </p>
                     </div>
                     <div class="casestudy__row--image">
-                        <img data-src="https://taw.imgix.net/taw2016Site/hmg-contact.png?w=1&h=1" class="casestudy__image">
+                        <img src="https://taw.imgix.net/taw2016Site/hmg-contact.png?w=1&h=1" class="casestudy__image">
                     </div>
 
                     <div class="casestudy__row--text column col-12">
@@ -196,7 +196,7 @@
                         </p>
                     </div>
                     <div class="casestudy__row--image column col-12">
-                        <img data-src="https://taw.imgix.net/taw2016Site/hmg-work.png?w=1&h=1" class="casestudy__image">
+                        <img src="https://taw.imgix.net/taw2016Site/hmg-work.png?w=1&h=1" class="casestudy__image">
                     </div>
                     <div class="casestudy__row--text column col-12">
                         <h2 class="roboto--bold fluid-type14-20">Coding</h2>
@@ -215,7 +215,7 @@
                         </p>
                     </div>
                     <div class="casestudy__row--image">
-                        <img data-src="https://taw.imgix.net/taw2016Site/HMG__homepage--old__screencap.png?w=1&h=1" class="casestudy__image">
+                        <img src="https://taw.imgix.net/taw2016Site/HMG__homepage--old__screencap.png?w=1&h=1" class="casestudy__image">
                     </div>
                     <div class="casestudy__emptyBlock casestudy__row">
                     </div>
