--- a/taw.html
+++ b/taw.html
@@ -143,7 +143,7 @@
             <div class="case__info">
                 <div class="casestudy__container">
                     <div class="casestudy__row--image">
-                        <img data-src="https://taw.imgix.net/taw2016Site/HomeImage.png?w=1&h=1" class="casestudy__image">
+                        <img src="https://taw.imgix.net/taw2016Site/HomeImage.png?w=1&h=1" class="casestudy__image">
                     </div>
                     <div class="casestudy__row--text column col-12">
                         <h2 class="roboto--bold fluid-type14-20">About</h2>
@@ -154,10 +154,10 @@
                         </p>
                     </div>
                     <div class="casestudy__row--image">
-                        <img data-src="https://taw.imgix.net/taw2016Site/HistoryImage.png?w=1&h=1" class="casestudy__image">
+                        <img src="https://taw.imgix.net/taw2016Site/HistoryImage.png?w=1&h=1" class="casestudy__image">
                     </div>
                     <div class="casestudy__row--image">
-                        <img data-src="https://taw.imgix.net/taw2016Site/RecapImage.png?w=1&h=1" class="casestudy__image">
+                        <img src="https://taw.imgix.net/taw2016Site/RecapImage.png?w=1&h=1" class="casestudy__image">
                     </div>
                     <div class="casestudy__row--text column col-12">
                         <h2 class="roboto--bold fluid-type14-20">Responsivity</h2>
@@ -167,10 +167,10 @@
                         </p>
                     </div>
                     <div class="casestudy__row--image">
-                        <img data-src="https://taw.imgix.net/taw2016Site/mobileScreens.png?w=1&h=1" class="casestudy__image">
+                        <img src="https://taw.imgix.net/taw2016Site/mobileScreens.png?w=1&h=1" class="casestudy__image">
                     </div>
                     <div class="casestudy__row--image">
-                        <img data-src="https://taw.imgix.net/taw2016Site/Ipad_screen.png?w=1&h=1" class="casestudy__image">
+                        <img src="https://taw.imgix.net/taw2016Site/Ipad_screen.png?w=1&h=1" class="casestudy__image">
                     </div>
                     <div class="casestudy__row--text column col-12">
                         <h2 class="roboto--bold fluid-type14-20">Performance</h2>
@@ -180,7 +180,7 @@
                         </p>
                     </div>
                     <div class="casestudy__row--image">
-                        <img data-src="https://taw.imgix.net/taw2016Site/team.png?w=1&h=1" class="casestudy__image">
+                        <img src="https://taw.imgix.net/taw2016Site/team.png?w=1&h=1" class="casestudy__image">
                     </div>
                     <div class="casestudy__row--text column col-12">
                         <p class="roboto--regular fluid-type14-20">
@@ -189,10 +189,10 @@
                         </p>
                     </div>
                     <div class="casestudy__row--image">
-                        <img data-src="https://taw.imgix.net/taw2016Site/history.png?w=1&h=1" class="casestudy__image">
+                        <img src="https://taw.imgix.net/taw2016Site/history.png?w=1&h=1" class="casestudy__image">
                     </div>
                     <div class="casestudy__row--image">
-                        <img data-src="https://taw.imgix.net/taw2016Site/food.png?w=1&h=1" class="casestudy__image">
+                        <img src="https://taw.imgix.net/taw2016Site/food.png?w=1&h=1" class="casestudy__image">
                     </div>
                     <div class="casestudy__emptyBlock casestudy__row">
                     </div>
