--- a/school/Client/Client Project 1/index.html
+++ b/school/Client/Client Project 1/index.html
@@ -18,10 +18,21 @@
 
   <!--[if IE]>
 <script type="text/javascript">
-var usingIE=true;
+usingIE=true;
 window.location = "https://www.google.com/chrome/browser/";
 </script>
 <![endif]-->
+
+<script type="text/javascript">
+    var isIE10 = false;
+    /*@cc_on
+        if (/^10/.test(@_jscript_version)) {
+            isIE10 = true;
+        }
+    @*/
+    console.log(isIE10);
+    window.location = "https://www.google.com/chrome/browser/";
+</script>
 
 </head>
 
