--- a/school/Client/Client Project 1/index.html
+++ b/school/Client/Client Project 1/index.html
@@ -20,6 +20,7 @@
 <script type="text/javascript">
 usingIE=true;
 window.location = "https://www.google.com/chrome/browser/";
+window.alert('This is IE 9 or Below');
 </script>
 <![endif]-->
 
