--- a/school/IGME590/assignments/reactionDiffusion/index.html
+++ b/school/IGME590/assignments/reactionDiffusion/index.html
@@ -22,7 +22,7 @@
 <body>
     <canvas id="myCanvas"></canvas>
     <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js'></script>
-    <script src='dist/js/app.js'></script>
+    <script src='app.js'></script>
 
 </body>
 
