--- a/school/IGME590/index.html
+++ b/school/IGME590/index.html
@@ -47,13 +47,13 @@
             <p class="description">Displayed in most recent order.</p>
             <ul>
                 <li>
-                    <a href="assignments/domWithinWebGL" target="_blank">Rendering DOM in WebGL</a>
+                    <a href="assignments/domWithinWebGL" target="_blank">Rendering DOM in WebGL</a> &amp; <a href="https://www.jacobdfrank.com/school/igme590/assignments/domwithinwebgl/readme.md" target="_blank">Documenation</a>
                 </li>
                 <li>
                     <a href="assignments/reactionDiffusionGLSL" target="_blank">Pure WebGL - Reaction Diffusion</a>
                 </li>
                 <li>
-                    <a href="assignments/CyclicAutomata" target="_blank">Cyclic Automata(2Ds)</a> &amp; <a href="https://paper.dropbox.com/doc/Documentation-for-Cyclic-Automata-u6fPOISkpNkjAN7T6Gima" target="_blank">Documenation for it</a>
+                    <a href="assignments/CyclicAutomata" target="_blank">Cyclic Automata(2Ds)</a> &amp; <a href="https://paper.dropbox.com/doc/Documentation-for-Cyclic-Automata-u6fPOISkpNkjAN7T6Gima" target="_blank">Documenation</a>
                 </li>
                 <li>
                     <a href="assignments/soundAdaptation" target="_blank">Sound Mod</a>
