--- a/about.html
+++ b/about.html
@@ -113,7 +113,7 @@
                 <img src="https://thoughtatwork.cias.rit.edu/img/taw2016Site/aboutPhotoCrop.jpg" class="case__cover__image__about" alt="Picture of me in jacket">
                 <div class="case__cover__content__about">
                     <h1 class="project__cover__content__title fluid-type24-44 myriad-pro-condensed">Hello, <br>
-I’m Jacob Frank, a Creative Developer, Designer and 2nd year student at the Rochester Institute of Technology. My goal is to make visually appealing websites and design and craft products for the people that need&nbsp;them&nbsp;most.
+I’m Jacob Frank, a Creative Developer, Designer, student at RIT and former Intern at B-Reel NY. My goal is to make visually appealing websites and design and craft products for the people that need&nbsp;them&nbsp;most.
                     </h1>
                     <div class="case__info__container__about">
                         <!-- <img src="https://taw.imgix.net/taw2016Site/meWithLegos.JPG?w=1&h=1" class="casestudy__image__about"> -->
