--- a/index.html
+++ b/index.html
@@ -93,6 +93,7 @@
     <div class="homepage__text">
         <p class="fluid-type30-60 myriad-pro-condensed homepage__name projects__name index--rise1"><a href="index.html">JACOB FRANK</a></p>
         <p class="fluid-type14-20 roboto--regular projects__subhead index--rise1"><a href="index.html">Developer &amp; Designer</a></p>
+        <p class="fluid-type14-20 roboto--regular projects__subhead index--rise1 inProgress"><a href="index.html">Formerly at B-Reel NY</a></p>
     </div>
     <div class="bottom__link link index--rise1">
         <p class="fluid-type14-20 roboto--regular center__link__name"> <a class="nolink__decoration bottom__link__name__color" id="bottom__Link--Change" href="#page2">Work</a></p>
